--- a/public/index.html
+++ b/public/index.html
@@ -58,12 +58,14 @@
     </style>
 </head>
 <body>
-    <h1>Async challenges</h1>
+    <h1>Async challenges ( 10.9.0.73:8080 )</h1>
 
     <p>Download the challenge client to participate</p>
+
+    <p>Unzip, cd to the directory, and run `npm start`</p>
+
     <a href="/client">Download Client</a>
 
-    <p>Unzip and in the directory run `npm start`</p>
 
     <section>
         <h1>Simple debugging</h1>
@@ -76,7 +78,7 @@
     </section>
 
     <section class="results">
-        
+
     </section>
 </body>
 </html>
