Update landing page, add logging on errors

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <h1>Async challenges ( 10.9.0.73:8080 )</h1>
+    <h1>Async challenges</h1>
 
     <p>Download the challenge client to participate</p>
 
